--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,4 +12,10 @@
     padding: 20px;
     background: #fff;
   }
+
+  .product-catalog{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
   
