--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,91 +1,2 @@
-<app-navbar [drawer]="drawer"></app-navbar>
-<mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened #drawer class="example-sidenav">
-    <h3>Categories</h3>
-    <mat-list>
-      <mat-list-item *ngFor="let category of categories();">
-        <span matListItemTitle>{{ category?.categoryName }}</span>
-      </mat-list-item>
-    </mat-list>
-  </mat-drawer>
-  <mat-drawer-content class="example-main">
-    <h2>Products</h2>
-    <div class="product-catalog">
-      <mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer> </mat-card
-      ><mat-card appearance="outlined">
-        <mat-card-header>product name</mat-card-header>
-        <mat-card-content>product description</mat-card-content>
-        <img mat-card-image />
-        <mat-card-actions>actions</mat-card-actions>
-        <mat-card-footer>extra</mat-card-footer>
-      </mat-card>
-    </div>
-  </mat-drawer-content>
-</mat-drawer-container>
-
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
