--- a/src/app/admin/pages/master/category/category.component.css
+++ b/src/app/admin/pages/master/category/category.component.css
@@ -1,5 +1,22 @@
-:host {
+.container{
+    padding: 40px;
+}
+
+.container-form{
+    padding: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+.header{
+    font-size: 22px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.form-field{
+    width: 100%;
+}
