--- a/src/app/admin/pages/master/category/category.component.html
+++ b/src/app/admin/pages/master/category/category.component.html
@@ -1,9 +1,59 @@
-<mat-tab-group>
-  <mat-tab label="Add">
-    <mat-form-field>
-      <mat-label>Input</mat-label>
-      <input matInput />
-    </mat-form-field>
-  </mat-tab>
-  <mat-tab label="View"> Content 2 </mat-tab>
-</mat-tab-group>
+<div class="container">
+  <mat-tab-group>
+    <mat-tab label="Add">
+      <mat-card class="container-form">
+        <mat-card-header class="header">Add Category</mat-card-header>
+        <mat-card-content>
+          <mat-form-field class="form-field">
+            <mat-label>Category Name</mat-label>
+            <input matInput />
+          </mat-form-field>
+          <button mat-flat-button color="primary">
+            Submit
+          </button></mat-card-content
+        >
+      </mat-card>
+    </mat-tab>
+    <mat-tab label="View">
+      <div class="mat-elevation-z8" style="margin-top: 10px; padding: 10px">
+        <table mat-table [dataSource]="dataSource">
+          <!-- Position Column -->
+          <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef>No.</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.position }}
+            </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef>Weight</th>
+            <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef>Symbol</th>
+            <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons
+          aria-label="Select page of periodic elements"
+        >
+        </mat-paginator>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
