--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,12 +1,9 @@
 <mat-toolbar>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-    (click)="drawer.toggle()"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
   <span>SportStore</span>
   <span class="example-spacer"></span>
+  <div class="master-manage">
+    <a mat-button routerLink="/admin/manage-category">Manage Categories</a>
+    <a mat-button href="#">Manage Products</a>
+    <button mat-raised-button>Logout</button>
+  </div>
 </mat-toolbar>
